Bug 221932 - detail pane does not clearly state which phone number I see
Summary: detail pane does not clearly state which phone number I see
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-09 15:58 UTC by Martin Koller
Modified: 2010-02-14 11:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2010-01-09 15:58:52 UTC
Version:           4.4 rc1 (using 4.3.90 (KDE 4.3.90 (KDE 4.4 RC1)) "release 209", KDE:KDE4:Factory:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31.5-0.1-desktop

In a vcf file I see the following types of phone numbers:
TEL;CELL;VOICE:...
TEL;WORK;VOICE:...
TEL;HOME;VOICE:...
TEL;WORK;FAX:...

but kaddressbook shows all VOICE numbers as "Other", which gives no clue about the real type.
Comment 1 Martin Koller 2010-01-09 16:00:00 UTC
It is not only the detail pane but also the "Edit Contact" dialog which does not display the correct type.
Comment 2 Tobias Koenig 2010-02-14 11:15:25 UTC
SVN commit 1089888 by tokoe:

Use full type label (e.g. 'Home/Voice') in the editor
and viewer.

BUG: 221932


 M  +1 -1      contactviewer.cpp  
 M  +1 -1      editor/phoneeditwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1089888