Use full type label (e.g. 'Home/Voice') in the editor and viewer.

BUG: 221932

svn path=/trunk/KDE/kdepimlibs/; revision=1089888